# practice-linux

./: .gitignore
client/: Makefile  client  main.c  run
linux-timers/: a.out  main.c
linux_mouse_event/: CMakeLists.txt  main.cpp
server/: Makefile  init_tcp.c  init_tcp.h  main.c  qc_server  run
server/includes/: general_includes.h  tcp_init.h  tcp_networking.h  thread_handler.h
server/src/: main.c  tcp_init.c  tcp_networking.c
tcp/client/: main.c
tcp/server/: Makefile
tcp/server/includes/: general_header.h  tcp_init.h  tcp_networking.h  thread_handler.h
tcp/server/src/: tcp_init.c  tcp_networking.c  thread_handler.c
